Module: Prevent categories from wrapping.

--- a/site/modules/bsexy/include/backend.css
+++ b/site/modules/bsexy/include/backend.css
@@ -57,6 +57,10 @@ div.list_item span.column.categories ul {
 	z-index: 1000;
 }
 
+div.list_item span.column.categories ul li {
+	white-space: nowrap;
+}
+
 div.list_item span.column.categories ul:empty {
 	display: none;
 }
